Fixed alignment of checkboxes for optionList items (#2313)

--- a/src/components/Choice/Choice.scss
+++ b/src/components/Choice/Choice.scss
@@ -4,7 +4,7 @@ $control-size: rem(16px);
 
 // Need to push the control down just a little to have it appear
 // vertically centered with the label.
-$control-vertical-adjustment: 2px;
+$control-vertical-adjustment: rem(2px);
 
 .Choice {
   display: inline-flex;
